# OnlineWallet-FastAPI

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 9f284f2c8e77_create_wallet_table.py
app/: .env  config.py  main.py
app/wallets/: database.py  models.py  router.py  schemas.py  service.py  shemas.py
scripts/: ensure_test_db.py  entrypoint.sh
tests/: conftest.py  test_wallet_service.py
