[project]
name = "onlinewallet-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.138.1",
    "greenlet>=3.5.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]
